fix height on safari

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,5 @@
 .container {
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
-  padding: 0 0.5rem;
+  padding: 2rem 0.5rem 1.5rem 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,7 +14,7 @@
 
 .main {
   font-family: 'Mukta';
-  padding: 5rem 0;
+  /*padding: 5rem 0;*/
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -35,7 +33,7 @@
 
 .footer {
   width: 100%;
-  height: 80px;
+  /*height: 80px;*/
   display: flex;
   justify-content: center;
   align-items: center;
